# HuntStand

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  HuntStand.postman_collection.json  LICENSE  README.md  SECURITY.md  huntareas.csv  huntstand.py  huntstand_chrom_all_urls.txt  huntstand_chrome_copy_as_powershell.txt  huntstand_exporter-0.2.0-py3-none-any.whl  hustand_chrome_save_as_curl.txt  hustand_chrome_save_as_fetch.txt  mypy.ini  pyproject.toml  requirements.txt  ruff.toml  test_results.csv
.github/: copilot-instructions.md
.github/workflows/: ci.yml  codescan.yml  pylint.yml
docs/: VERIFICATION_RESULTS.md
exports/: huntstand_members_detailed_20251028_165819.csv  huntstand_membership_matrix_20251028_165819.csv  huntstand_summary_20251028_165819.json  members_verification_20251030_095114.csv
import/: admin.csv  members.csv  view_only.csv
src/huntstand_exporter/: __init__.py  __main__.py  add_members.py  exporter.py
src/huntstand_importer/: add_hunt_members.py  admin.csv  huntareas.csv  members.csv  view_only.csv
tests/: conftest.py  test_add_members_dry_run.py  test_assets.py  test_auth.py  test_dry_run.py  test_dynamic_assets.py  test_fallback.py  test_format_flag.py  test_matrix.py  test_normalize.py  test_parallel.py  test_safety.py  test_timestamped.py
